--- a/2D_Editor/2D_Editor.csproj
+++ b/2D_Editor/2D_Editor.csproj
@@ -69,6 +69,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Converters\BoolToThickness.cs" />
+    <Compile Include="Converters\PercentageToAbsolute.cs" />
+    <Compile Include="Converters\RelativePathToImageSource.cs" />
     <Compile Include="WelcomeWindow.xaml.cs">
       <DependentUpon>WelcomeWindow.xaml</DependentUpon>
     </Compile>
@@ -169,5 +172,6 @@
   <ItemGroup>
     <Resource Include="Images\plus.png" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
