--- a/CoordinatorConnectorLibrary/CoordinatorConnectorLibrary.csproj
+++ b/CoordinatorConnectorLibrary/CoordinatorConnectorLibrary.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="RestSharp" Version="106.11.4" />
+  </ItemGroup>
+
 </Project>
