--- a/2D_Editor/App.config
+++ b/2D_Editor/App.config
@@ -1,6 +1,24 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="_2D_Editor.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+    <userSettings>
+        <_2D_Editor.Properties.Settings>
+            <setting name="userEmail" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="userPassword" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="userRemember" serializeAs="String">
+                <value>False</value>
+            </setting>
+        </_2D_Editor.Properties.Settings>
+    </userSettings>
 </configuration>
