--- a/2D_Editor/2D_Editor.csproj
+++ b/2D_Editor/2D_Editor.csproj
@@ -185,6 +185,8 @@
   <ItemGroup>
     <Resource Include="Images\plus.png" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Resource Include="Images\settings.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
