--- a/2D_Editor/App.config
+++ b/2D_Editor/App.config
@@ -19,6 +19,12 @@
             <setting name="userRemember" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="OIDCclientID" serializeAs="String">
+                <value>test</value>
+            </setting>
+            <setting name="OIDCclientSecret" serializeAs="String">
+                <value>test2</value>
+            </setting>
         </_2D_Editor.Properties.Settings>
     </userSettings>
   <runtime>
