--- a/.gitignore
+++ b/.gitignore
@@ -342,3 +342,6 @@ healthchecksdb
 2D_Editor/App.config
 2D_Editor/App.config
 2D_Editor/App.config
+2D_Editor/App.config
+2D_Editor/Properties/Settings.Designer.cs
+2D_Editor/Properties/Settings.settings
