backend oidc accesstoken

--- a/2D_Editor/App.config
+++ b/2D_Editor/App.config
@@ -20,10 +20,10 @@
                 <value>False</value>
             </setting>
             <setting name="OIDCclientID" serializeAs="String">
-                <value>test</value>
+                <value>8185c0e6-8d7c-4690-8238-c7194a8f65d3</value>
             </setting>
             <setting name="OIDCclientSecret" serializeAs="String">
-                <value>test2</value>
+                <value>AMWt_PCXU6R0-oTAYSVLVaCXEL_Dut8Vs7XlA7PBtjfekPLiMwB0es6JTpGnqxVR9L-0plJ79N0ZVFrlX1BfYmY</value>
             </setting>
         </_2D_Editor.Properties.Settings>
     </userSettings>
