--- a/2D_Editor/App.config
+++ b/2D_Editor/App.config
@@ -33,6 +33,10 @@
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-12.0.0.0" newVersion="12.0.0.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="DotNetZip" publicKeyToken="6583c7c814667745" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.13.3.0" newVersion="1.13.3.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 </configuration>
