--- a/2D_Editor/packages.config
+++ b/2D_Editor/packages.config
@@ -1,8 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AngleSharp" version="0.9.11" targetFramework="net472" />
+  <package id="DotNetZip" version="1.13.3" targetFramework="net472" />
   <package id="FontAwesome.WPF" version="4.7.0.9" targetFramework="net472" />
+  <package id="Gnostice.DocumentStudio.Converter" version="21.1.870" targetFramework="net472" />
+  <package id="Gnostice.DocumentStudio.Foundation" version="21.1.870" targetFramework="net472" />
   <package id="IdentityModel" version="4.1.0" targetFramework="net472" />
   <package id="IdentityModel.OidcClient" version="4.0.0-preview.1.3" targetFramework="net472" />
+  <package id="log4net" version="2.0.8" targetFramework="net472" />
   <package id="Microsoft.Extensions.Configuration" version="2.1.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.1.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Configuration.Binder" version="2.1.0" targetFramework="net472" />
@@ -16,6 +21,7 @@
   <package id="Microsoft.IdentityModel.Tokens" version="5.6.0" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
   <package id="RestSharp" version="106.11.4" targetFramework="net472" />
+  <package id="Spire.PDF" version="7.3.3" targetFramework="net472" />
   <package id="System.Buffers" version="4.4.0" targetFramework="net472" />
   <package id="System.IdentityModel.Tokens.Jwt" version="5.6.0" targetFramework="net472" />
   <package id="System.IO.Compression" version="4.3.0" targetFramework="net472" />
