--- a/2D_Editor/packages.config
+++ b/2D_Editor/packages.config
@@ -20,6 +20,8 @@
   <package id="Microsoft.IdentityModel.Logging" version="5.6.0" targetFramework="net472" />
   <package id="Microsoft.IdentityModel.Tokens" version="5.6.0" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
+  <package id="PdfiumViewer" version="2.13.0.0" targetFramework="net472" />
+  <package id="PdfiumViewer.Native.x86_64.v8-xfa" version="2018.4.8.256" targetFramework="net472" />
   <package id="RestSharp" version="106.11.4" targetFramework="net472" />
   <package id="Spire.PDF" version="7.3.3" targetFramework="net472" />
   <package id="System.Buffers" version="4.4.0" targetFramework="net472" />
