--- a/2D_Editor/packages.config
+++ b/2D_Editor/packages.config
@@ -5,17 +5,19 @@
   <package id="FontAwesome.WPF" version="4.7.0.9" targetFramework="net472" />
   <package id="Gnostice.DocumentStudio.Converter" version="21.1.870" targetFramework="net472" />
   <package id="Gnostice.DocumentStudio.Foundation" version="21.1.870" targetFramework="net472" />
-  <package id="IdentityModel" version="4.1.0" targetFramework="net472" />
-  <package id="IdentityModel.OidcClient" version="4.0.0-preview.1.3" targetFramework="net472" />
+  <package id="IdentityModel" version="5.1.0" targetFramework="net472" />
+  <package id="IdentityModel.OidcClient" version="4.0.0" targetFramework="net472" />
   <package id="log4net" version="2.0.8" targetFramework="net472" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Configuration" version="2.1.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.1.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Configuration.Binder" version="2.1.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.1.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Logging" version="2.1.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Logging.Abstractions" version="2.1.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Options" version="2.1.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Primitives" version="2.1.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="5.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="5.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging" version="5.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="5.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Options" version="5.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Primitives" version="5.0.0" targetFramework="net472" />
   <package id="Microsoft.IdentityModel.JsonWebTokens" version="5.6.0" targetFramework="net472" />
   <package id="Microsoft.IdentityModel.Logging" version="5.6.0" targetFramework="net472" />
   <package id="Microsoft.IdentityModel.Tokens" version="5.6.0" targetFramework="net472" />
@@ -24,12 +26,16 @@
   <package id="PdfiumViewer.Native.x86_64.v8-xfa" version="2018.4.8.256" targetFramework="net472" />
   <package id="RestSharp" version="106.11.4" targetFramework="net472" />
   <package id="Spire.PDF" version="7.3.3" targetFramework="net472" />
-  <package id="System.Buffers" version="4.4.0" targetFramework="net472" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
+  <package id="System.Diagnostics.DiagnosticSource" version="5.0.0" targetFramework="net472" />
   <package id="System.IdentityModel.Tokens.Jwt" version="5.6.0" targetFramework="net472" />
   <package id="System.IO.Compression" version="4.3.0" targetFramework="net472" />
   <package id="System.IO.Compression.ZipFile" version="4.3.0" targetFramework="net472" />
-  <package id="System.Memory" version="4.5.0" targetFramework="net472" />
-  <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net472" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.0" targetFramework="net472" />
-  <package id="System.Text.Encodings.Web" version="4.5.0" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net472" />
+  <package id="System.Text.Encodings.Web" version="5.0.1" targetFramework="net472" />
+  <package id="System.Text.Json" version="5.0.1" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
 </packages>
